--- a/tukangonline/dashboard/chat.html
+++ b/tukangonline/dashboard/chat.html
@@ -95,10 +95,10 @@
             <div class="container">
 
                 <div class="d-flex justify-content-between align-items-center">
-                    <h2>Chat Tukang</h2>
+                    <h2>Chat</h2>
                     <ol>
                         <li><a href="index.html">Home</a></li>
-                        <li>Chat Tukang</li>
+                        <li>Chat</li>
                     </ol>
                 </div>
 
