--- a/tukangonline/index.html
+++ b/tukangonline/index.html
@@ -143,15 +143,7 @@
                     <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
                         <h3>Latar Belakang.</h3>
                         <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                        </ul>
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                            Belakangan ini masyarakat semakin merasakan betapa susahnya mencari jasa tukang bangunan. Fenomena tersebut tidak hanya dirasakan warga perkotaan, tetapi juga merambah ke pelosok pedesaan. Ibaratnya, tukang sekarang menjelma menjadi profesi yang langka. Berdasarkan survei yang ada pada tanggal 2 Agustus 2019 oleh Radio R2B Rembang, salah satu warga bernama Muharsono, mengaku kesulitan dalam mencari tukang dan bahkan dapat antre berbulan-bulan, hal itu dapat terjadi karena panggilan dari salah satu tukang tersebut sangat padat dan jumlah tukang dengan garapan tidak sebanding.
                         </p>
                     </div>
                 </div>
@@ -160,15 +152,8 @@
                     <div class="pt-4 pt-lg-0 order-2 order-lg-1 content" data-aos="fade-right" data-aos-delay="100">
                         <h3>Tujuan.</h3>
                         <p class="fst-italic">
-                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        </p>
-                        <ul>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                            <li><i class="ri-check-double-line"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                            <li><i class="ri-check-double-line"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                        </ul>
-                        <p>
-                            Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident
+                            Kami berharap dengan adanya Tukang Online dapat membantu konsumen dalam mencari tukang yang kompeten untuk memperbaiki kerusakan rumah. Kami juga menarget tukang dengan cara membuka lahan pekerjaan berbasis online sehingga dapat membantu tukang dalam mencari konsumen.
+Hasil yang diharapkan pengguna dapat dengan mudah mencari tukang untuk membenahi kerusakan pada rumah dan tentunya membantu para tukang untuk lebih mudah mencari pekerjaan.
                         </p>
                     </div>
                 </div>
